added fetchAllRecord
